[project]
name = "msdparser"
version = "3.0.0a5"
description = "Low-level parser for StepMania MSD files (SM, SSC, DWI...)"
authors = [
    { name = "Ash Garcia", email = "github@garcia.sh" }
]
license = { text = "MIT License" }
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
keywords = ["stepmania", "simfile", "sm", "ssc", "dwi"]
requires-python = ">= 3.10"

[dependency-groups]
dev = [
    "pytest>=8.3.2",
    "black>=24.8.0",
    "sphinx>=8.0.2",
    "sphinx-rtd-theme~=3.0.0rc1",
    "sphinx-autoapi>=3.2.1",
]
